<resources>
    <string name="app_name">ProjetLokaCar</string>
    <string name="nom_agence">Agence CoolCars</string>
    <string name="login">Login :</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="valider">Valider</string>
    <string name="btn_nouvelle_location">Nouvelle location</string>
    <string name="btn_retour_location">Retour location</string>
    <string name="btn_gestion_vehicules">Gestion véhicules</string>
    <string name="btn_gestion_clients">Gestion clients</string>
    <string name="btn_statistiques">Statistiques</string>
    <string name="prenom_client">Prénom :</string>
    <string name="nom_client">Nom :</string>
    <string name="adresse_client">Adresse :</string>
    <string name="ville_client">Ville :</string>
    <string name="cp_client">Code postal :</string>
    <string name="telephone_client">Téléphone :</string>
    <string name="email_client">Email :</string>
    <string name="num_permis_client">N° permis :</string>
    <string name="status">Statut :</string>
    <string name="filter_vehicules">Filtrer les véhicules</string>
    <string name="tous">Tous</string>
    <string name="recherche">Recherche...</string>
    <string name="choix_date_depart">Date de début :</string>
    <string-array name="status">
        <item>Tous</item>
        <item>Disponibles</item>
        <item>Loués</item>
    </string-array>
    <string-array name="categorie_vehicule">
        <item>Tous</item>
        <item>Disponibles</item>
        <item>Loués</item>
    </string-array>
    <string name="stats">Statistiques</string>
    <string name="acc">Accueil</string>
    <string name="errorPrenomClient">Le prénom est obligatoire</string>
    <string name="errorNomClient">Le nom est obligatoire</string>
    <string name="errorAdresseClient">L\'adresse est obligatoire</string>
    <string name="errorVilleClient">La ville est obligatoire</string>
    <string name="errorCpClient">Le code postal est obligatoire</string>
    <string name="errorTelephoneClient">Le téléphone est obligatoire</string>
    <string name="errorEmailClient">L\'email est obligatoire</string>
    <string name="errorNumPermisClient">Le numéro de permis est obligatoire</string>
    <string name="prix">Prix :</string>
    <string name="etat_lieux_depart">État des lieux de départ :</string>
    <string name="ajouter_photo">Ajouter des photos</string>
    <string name="rechercher_par_immatriculation">Entrez un n° d\'immatriculation</string>
    <string name="client">Client :</string>
    <string name="date_depart">Date de début :</string>
    <string name="date_retour">Date de retour :</string>
    <string name="modele">Modèle :</string>
    <string name="marque">Marque :</string>
    <string name="immatriculation">Immatriculation :</string>
    <string name="app_label">@string/app_name</string>
    <string name="search_hint">Entrez un n° d\'immatriculation</string>

    <string name="errorImmatriculation">L\'immatriculation est obligatoire</string>
    <string name="errorMarque">La Marque est obligatoire</string>
    <string name="errorModele">Le Modèle est obligatoire</string>
    <string name="errorCategorie">La catégorie est obligatoire</string>
    <string name="errorPrix">Le prix par jour est obligatoire</string>





</resources>
